// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimerColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-yv97k9-PrimerColor"
  >
    <div
      class="css-1drieyl-PrimerColor"
      style="display: inline-block;"
    >
      <div
        class="css-1wmh0wy-PrimerColor"
      >
        <div
          class="css-15u3omv-PrimerColor"
        >
          Yellow
        </div>
        <div
          class="css-tl807l-PrimerColor"
        >
          <div
            class="css-4q9z56-PrimerColor"
          >
            $yellow-500
          </div>
          <div>
            #ffd33d
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrimerColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1wilymo-PrimerColorPalette"
  >
    <div
      class="css-yv97k9-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-1wmh0wy-PrimerColor"
        >
          <div
            class="css-15u3omv-PrimerColor"
          >
            Yellow
          </div>
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-500
            </div>
            <div>
              #ffd33d
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-bmsj4s-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-000
            </div>
            <div>
              #fffdef
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-j8onzl-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-100
            </div>
            <div>
              #fffbdd
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-1yl7g3w-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-200
            </div>
            <div>
              #fff5b1
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-1kpcn19-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-300
            </div>
            <div>
              #ffea7f
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-1djuu3x-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-400
            </div>
            <div>
              #ffdf5d
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-14g47lk-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-500
            </div>
            <div>
              #ffd33d
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-10qd37l-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-600
            </div>
            <div>
              #f9c513
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-13eaueb-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-700
            </div>
            <div>
              #dbab09
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1q0a4da-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-1arrtjz-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-800
            </div>
            <div>
              #b08800
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-13wz6lj-PrimerColor"
    >
      <div
        class="css-1drieyl-PrimerColor"
        style="display: inline-block;"
      >
        <div
          class="css-oovmdd-PrimerColor"
        >
          <div
            class="css-tl807l-PrimerColor"
          >
            <div
              class="css-4q9z56-PrimerColor"
            >
              $yellow-900
            </div>
            <div>
              #735c0f
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
